# ux-mediapipe

./: .gitignore  Cargo.toml  README.md
examples/: hello.rs
src/: bindings.rs  hand_tracking_desktop_live.txt  lib.rs
