[package]
name = "ux-mediapipe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mediapipe"

[dependencies]
cgmath = "0.18.0"
libc = "0.2.0"
opencv = {version = "0.63.0", default-features = false, features = ["videoio", "highgui", "imgproc"]}
protobuf = "2.23.0"
